--- a/index.html
+++ b/index.html
@@ -18,17 +18,6 @@
         .hero-clip {
             clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
         }
-        .logo-placeholder {
-            width: 200px;
-            height: 70px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: 2px dashed #cbd5e1;
-            background: #f8fafc;
-            border-radius: 8px;
-            overflow: hidden;
-        }
     </style>
 </head>
 <body class="bg-gray-50 font-sans text-gray-800">
@@ -37,10 +26,12 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-4">
-                <!-- LOGO TEMPLATE -->
-                <div class="logo-placeholder">
-                    <span class="text-[10px] text-gray-400 font-bold uppercase text-center">Logo Template<br>(Upload Here)</span>
-                </div>
+                <!-- ✅ HEADER LOGO ADDED -->
+                <a href="#home">
+                    <img src="high-tech-logo_page-0001.jpg" 
+                         alt="High Tech Consultancy Services" 
+                         class="h-16 w-auto object-contain hover:scale-105 transition-transform" />
+                </a>
                 <div class="border-l pl-4 hidden lg:block">
                     <h1 class="text-sm font-bold text-blue-900 leading-tight uppercase">High Tech</h1>
                     <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-widest">Consultancy Services</p>
@@ -76,7 +67,7 @@
         </div>
     </section>
 
-    <!-- Certification Badges (From PDF Page 2) -->
+    <!-- Certification Badges -->
     <div class="container mx-auto px-4 -mt-12 relative z-30">
         <div class="bg-white p-6 rounded-2xl shadow-xl flex flex-wrap justify-center gap-8 border-b-4 border-blue-900">
             <span class="px-4 py-2 bg-blue-50 rounded-lg text-xs font-bold border border-blue-100 uppercase tracking-tighter text-blue-900">GST Registered</span>
@@ -87,7 +78,7 @@
         </div>
     </div>
 
-    <!-- About Section (From PDF Page 2) -->
+    <!-- About Section -->
     <section id="about" class="py-24 bg-white">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-start">
@@ -115,7 +106,7 @@
         </div>
     </section>
 
-    <!-- Services (From PDF Page 3) -->
+    <!-- Services Section -->
     <section id="services" class="py-24 bg-gray-50">
         <div class="container mx-auto px-4">
             <div class="text-center max-w-2xl mx-auto mb-16">
@@ -153,7 +144,7 @@
         </div>
     </section>
 
-    <!-- Our Clients (From PDF Page 4) -->
+    <!-- Our Clients -->
     <section id="clients" class="py-24 bg-white">
         <div class="container mx-auto px-4">
             <h3 class="text-3xl font-bold mb-16 text-center text-blue-900 uppercase tracking-widest">Our Clients</h3>
@@ -167,7 +158,7 @@
         </div>
     </section>
 
-    <!-- Map & Contact (From PDF Page 5) -->
+    <!-- Contact Section -->
     <section id="contact" class="py-24 bg-gray-900">
         <div class="container mx-auto px-4">
             <div class="bg-gray-800 rounded-3xl overflow-hidden flex flex-col lg:flex-row shadow-2xl">
@@ -196,10 +187,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mt-12 pt-12 border-t border-white/10">
-                        <div class="logo-placeholder bg-white/5 border-white/20">
-                            <span class="text-[9px] text-gray-500 font-bold uppercase">Contact Logo</span>
-                        </div>
+                    <!-- ✅ CONTACT SECTION LOGO ADDED -->
+                    <div class="mt-12 pt-12 border-t border-white/10 flex justify-center">
+                        <img src="high-tech-logo_page-0001.jpg" 
+                             alt="High Tech Consultancy Services" 
+                             class="h-14 w-auto object-contain opacity-80" />
                     </div>
                 </div>
                 
@@ -222,9 +214,10 @@
     <footer class="bg-black text-gray-600 py-16 border-t border-gray-900">
         <div class="container mx-auto px-4 text-center">
             <div class="flex flex-col items-center mb-6">
-                <div class="logo-placeholder scale-75 border-gray-800 bg-gray-900 mb-6">
-                    <span class="text-[10px] text-gray-700 font-bold uppercase">Footer Logo</span>
-                </div>
+                <!-- ✅ FOOTER LOGO ADDED -->
+                <img src="high-tech-logo_page-0001.jpg" 
+                     alt="High Tech Consultancy Services" 
+                     class="h-14 w-auto object-contain scale-75 mb-6" />
                 <h2 class="text-white font-bold tracking-[0.3em] uppercase">High Tech Consultancy Services</h2>
                 <p class="text-[10px] mt-2 uppercase tracking-widest text-blue-600">GeM Portal Marketplace Service Provider</p>
             </div>
