--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="flex items-center space-x-4">
                 <!-- ✅ HEADER LOGO ADDED -->
                 <a href="#home">
-                    <img src="high-tech-logo_page-0001.jpg" 
+                    <img src="https://raw.githubusercontent.com/Prakharsharma0620/high-tech/refs/heads/main/high%20tech%20logo_page-0001.jpg" 
                          alt="High Tech Consultancy Services" 
                          class="h-16 w-auto object-contain hover:scale-105 transition-transform" />
                 </a>
@@ -230,3 +230,4 @@
 
 </body>
 </html>
+
