--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </div>
                     <!-- ✅ CONTACT SECTION LOGO ADDED -->
                     <div class="mt-12 pt-12 border-t border-white/10 flex justify-center">
-                        <img src="high-tech-logo_page-0001.jpg" 
+                        <img src="https://raw.githubusercontent.com/Prakharsharma0620/high-tech/refs/heads/main/high%20tech%20logo_page-0001.jpg" 
                              alt="High Tech Consultancy Services" 
                              class="h-14 w-auto object-contain opacity-80" />
                     </div>
@@ -215,7 +215,7 @@
         <div class="container mx-auto px-4 text-center">
             <div class="flex flex-col items-center mb-6">
                 <!-- ✅ FOOTER LOGO ADDED -->
-                <img src="high-tech-logo_page-0001.jpg" 
+                <img src="https://raw.githubusercontent.com/Prakharsharma0620/high-tech/refs/heads/main/high%20tech%20logo_page-0001.jpg" 
                      alt="High Tech Consultancy Services" 
                      class="h-14 w-auto object-contain scale-75 mb-6" />
                 <h2 class="text-white font-bold tracking-[0.3em] uppercase">High Tech Consultancy Services</h2>
@@ -230,4 +230,5 @@
 
 </body>
 </html>
+
 
