--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <a href="#about" class="hover:text-blue-900 transition">About Company</a>
                 <a href="#services" class="hover:text-blue-900 transition">What We Do?</a>
                 <a href="#contact" class="bg-blue-900 text-white px-6 py-2 rounded-full hover:bg-blue-800 transition shadow-md">Get In Touch</a>
+                <a href="#contact" class="bg-blue-900 text-white px-6 py-2 rounded-full hover:bg-blue-800 transition shadow-md">Form</a>
             </nav>
         </div>
     </header>
@@ -183,7 +184,7 @@
                             <i class="fas fa-envelope text-yellow-400 mt-1"></i>
                             <div>
                                 <p class="text-xs uppercase text-gray-400">Email Address</p>
-                                <p class="font-bold">Lucknow8313@gmail.com</p>
+                                <p class="font-bold">info.hightechconsultancy@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -220,12 +221,13 @@
             <p class="text-[10px] max-w-2xl mx-auto mb-8">
                 ISO 9001:2015 CERTIFIED • GST • EPF • ESIC • LABOR LICENCE • QCI CERTIFICATION • LIN
             </p>
-            <p class="text-[10px]">&copy; 2024 High Tech Consultancy Services. Lucknow, U.P.</p>
+            <p class="text-[10px]">&copy; 2021 High Tech Consultancy Services. Lucknow, U.P.</p>
         </div>
     </footer>
 
 </body>
 </html>
+
 
 
 
