--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="#about" class="hover:text-blue-900 transition">About Company</a>
                 <a href="#services" class="hover:text-blue-900 transition">What We Do?</a>
                 <a href="#contact" class="bg-blue-900 text-white px-2 py-2 rounded-full hover:bg-blue-800 transition shadow-md">Get In Touch</a>
-                <a href="#contact" class="bg-blue-900 text-white px-2 py-2 rounded-full hover:bg-blue-800 transition shadow-md">Apply now</a>
+                <a href="./form.php" class="bg-blue-900 text-white px-2 py-2 rounded-full hover:bg-blue-800 transition shadow-md">Apply now</a>
             </nav>
         </div>
     </header>
@@ -227,6 +227,7 @@
 
 </body>
 </html>
+
 
 
 
